# topolino

./: README.md  pyproject.toml
src/: config.py  main.py  parse.py  payload.py  request.py
tests/: __init__.py  test_config.py  test_parse.py  test_payload.py  test_request.py
