[tool.poetry]
name = "topolino"
version = "0.1.0"
description = "Wave your wand and find your booking!"
authors = ["Joshua Spratt <jspratt02@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
coverage = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src/"

[tool.coverage.run]
omit = ["src/main.py"]
